# template-vcpkg

./: .gitignore  CMakeLists.txt  build.cmd
src/: template_vcpkg.ixx
